--- a/src/app/views/articles-list.html
+++ b/src/app/views/articles-list.html
@@ -4,4 +4,27 @@
   </div>
 </div>
 <div class="container">
+  <div *ngIf="!articles">
+    Cargando el listado de artículos...
+  </div>
+  <div *ngIf="articles">
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Author</th>
+          <th>Publish Date</th>
+          <th>Options</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let article of articles">
+          <td>{{article.title}}</td>
+          <td>{{article.author}}</td>
+          <td>{{article.publishDate}}</td>
+          <td><a href="/delete/{{article.id}}">Eliminar</a></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
