--- a/src/app/views/articles-list.html
+++ b/src/app/views/articles-list.html
@@ -4,6 +4,13 @@
   </div>
 </div>
 <div class="container">
+  <!-- Nuevo Artículo -->
+  <div>
+    <!-- Si llevase parámetros: [routerLink]="['/delete]', article.id]" -->
+    <a class="btn btn-md btn-success" [routerLink]="['/newArticle]']">New Article</a>
+  </div>
+  <hr>
+  <!-- Listado de Artículos -->
   <div *ngIf="!articles">
     Cargando el listado de artículos...
   </div>
@@ -21,8 +28,8 @@
         <tr *ngFor="let article of articles">
           <td>{{article.title}}</td>
           <td>{{article.author}}</td>
-          <td>{{article.publishDate}}</td>
-          <td><a href="/delete/{{article.id}}">Eliminar</a></td>
+          <td>{{article.publishDate | date:'dd/MM/yyyy'}}</td>
+          <td><a class="btn btn-md btn-danger" (click)="onDeleteArticle(article.id)">Remove</a></td>
         </tr>
       </tbody>
     </table>
