Corregido el error en el enlace de crear artículo

--- a/src/app/views/articles-list.html
+++ b/src/app/views/articles-list.html
@@ -7,7 +7,7 @@
   <!-- Nuevo Artículo -->
   <div>
     <!-- Si llevase parámetros: [routerLink]="['/delete]', article.id]" -->
-    <a class="btn btn-md btn-success" [routerLink]="['/newArticle]']">New Article</a>
+    <a class="btn btn-md btn-success" [routerLink]="['/newArticle']">New Article</a>
   </div>
   <hr>
   <!-- Listado de Artículos -->
