Revert "Añadidas las clases necesarias para crear un nuevo artículo"
This reverts commit b5f10ca89f5ebd6923a1c6e14baac7d6d3bee9d0.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-        <a [routerLink]="['/home']" class="navbar-brand">{{title}}</a>
+        <a href="home" class="navbar-brand">{{title}}</a>
       </div>
       <!-- Collection of nav links and other content for toggling -->
       <div id="navbarCollapse" class="collapse navbar-collapse">
