--- a/src/app/views/article-add.html
+++ b/src/app/views/article-add.html
@@ -4,19 +4,19 @@
   </div>
 </div>
 <div class="container">
-  <form #article="ngForm" (ngSubmit)="onSubmit()">
+  <form #articleForm="ngForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="titleArticle">Title</label>
       <input type="text" class="form-control" id="titleArticle" placeholder="Name of article" #title="ngModel" name="title" [(ngModel)]="articulo.title" required>
     </div>
     <div class="form-group">
       <label for="authorArticle">Author</label>
-      <input type="text" class="form-control" id="authorArticle" placeholder="Enter the author of article" #author="ngModel" name="author" [(ngModel)]="articulo.author">
+      <input type="text" class="form-control" id="authorArticle" placeholder="Enter the author of article" #author="ngModel" name="author" [(ngModel)]="articulo.author" required>
     </div>
     <div class="form-group">
       <label for="textArticle">Example textarea</label>
-      <textarea class="form-control" id="textArticle" rows="5" placeholder="Enter the content of article"  #text="ngModel" name="text" [(ngModel)]="articulo.text"></textarea>
+      <textarea class="form-control" id="textArticle" rows="5" placeholder="Enter the content of article"  #text="ngModel" name="text" [(ngModel)]="articulo.text" required></textarea>
     </div>
-    <button type="submit" class="btn btn-success" value="Guardar">Add Article</button>
+    <input type="submit" class="btn btn-success" value="Add article" [disabled]="!articleForm.form.valid"/>
   </form>
 </div>
