--- a/src/app/views/articles-list.html
+++ b/src/app/views/articles-list.html
@@ -28,8 +28,12 @@
         <tr *ngFor="let article of articles">
           <td>{{article.title}}</td>
           <td>{{article.author}}</td>
-          <td>{{article.publishDate | date:'dd/MM/yyyy'}}</td>
-          <td><a class="btn btn-md btn-danger" (click)="onDeleteArticle(article.id)">Remove</a></td>
+          <td>{{article.publishDate | date: 'dd/MM/yyyy'}}</td>
+          <td>
+            <a class="btn btn-md btn-info" [routerLink]="['/articles', article.id]">Details</a>
+            <a class="btn btn-md btn-warning" [routerLink]="['/articles/update', article.id]">Update</a>
+            <a class="btn btn-md btn-danger" (click)="onDeleteArticle(article.id)">Remove</a>
+          </td>
         </tr>
       </tbody>
     </table>
