Añadida la funcionalidad de actualizar un artículo

--- a/src/app/views/article-add.html
+++ b/src/app/views/article-add.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <div class="container">
-    <h1>{{titleNew}}</h1>
+    <h1>{{titleUpdate}}</h1>
   </div>
 </div>
 <div class="container">
