--- a/src/app/views/article-update.html
+++ b/src/app/views/article-update.html
@@ -1,10 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="jumbotron">
+  <div class="container">
+    <h1>{{titleUpdate}}</h1>
+  </div>
+</div>
+<div class="container">
+  <form #articleForm="ngForm" (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label for="titleArticle">Title</label>
+      <input type="text" class="form-control" id="titleArticle" placeholder="Name of article" #title="ngModel" name="title" [(ngModel)]="articulo.title" required>
+    </div>
+    <div class="form-group">
+      <label for="authorArticle">Author</label>
+      <input type="text" class="form-control" id="authorArticle" placeholder="Enter the author of article" #author="ngModel" name="author" [(ngModel)]="articulo.author" required>
+    </div>
+    <div class="form-group">
+      <label for="textArticle">Example textarea</label>
+      <textarea class="form-control" id="textArticle" rows="5" placeholder="Enter the content of article"  #text="ngModel" name="text" [(ngModel)]="articulo.text" required></textarea>
+    </div>
+    <input type="submit" class="btn btn-success" value="Edit article" [disabled]="!articleForm.form.valid"/>
+  </form>
+</div>
