Solucionado el error de JavaScript al comprobar la propiedad length de un array = null

--- a/src/app/views/article-view.html
+++ b/src/app/views/article-view.html
@@ -32,7 +32,7 @@
     </div>
   </div>
   <hr>
-  <div *ngIf="articulo.comments.length == 0" class="panel panel-default">
+  <div *ngIf="articulo.comments != null && articulo.comments.length == 0" class="panel panel-default">
     <div class="panel-body">There are no comments</div>
   </div>
   <div *ngFor="let comment of articulo.comments" class="panel panel-default">
